# error_compat_rust_experiments

./: Cargo.toml  README.md
src/: disjoint.rs  intersection.rs  lib.rs  union.rs
