[package]
name = "error_compat_rust_experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros = {version = "0.23.0", git="https://github.com/ratmice/strum.git", branch="enum_metadata"}
strum = {version = "0.23.0", git="https://github.com/ratmice/strum.git", branch="enum_metadata"}
enum_extra = {git="https://github.com/ratmice/enum_extra.git"}
enum_extra_derive = {git="https://github.com/ratmice/enum_extra.git"}
rustversion = "1.0.6"
